--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hotkeys-hook": "^5.0.1",
     "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.9",
     "tailwind-merge": "^3.2.0",
